--- a/UncompromisingTribalFaction.csproj
+++ b/UncompromisingTribalFaction.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>1.3\Assemblies\</OutputPath>
+    <OutputPath>1.4\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,13 +25,15 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>1.3\Assemblies\</OutputPath>
+    <OutputPath>1.4\Assemblies\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Source\FilthDefOf.cs" />
+    <Compile Include="Source\FuuFireArrow.cs" />
     <Compile Include="Source\SmokeBomb.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -42,26 +44,47 @@
     <Content Include="1.3\Defs\FireBow.xml" />
     <Content Include="1.3\Defs\PawnKinds_Tribal.xml" />
     <Content Include="1.3\Defs\SmokeBomb.xml" />
+    <Content Include="1.3\Patches\Add_FireBows.xml" />
     <Content Include="1.3\Patches\Add_SmokeBombs.xml" />
     <Content Include="1.3\Patches\Combat_Power.xml" />
     <Content Include="1.3\Patches\Double_Money.xml" />
-    <Content Include="1.3\Patches\Add_FireBows.xml" />
+    <Content Include="1.3\Patches\Factions_Misc.xml" />
     <Content Include="1.3\Patches\VAE_Accessories.xml" />
     <Content Include="1.3\Patches\VWE_Tribal.xml" />
-    <Content Include="1.3\Patches\Factions_Misc.xml" />
+    <Content Include="1.4\Defs\Filth_FireArrow.xml" />
+    <Content Include="1.4\Defs\GreatFlamebow.xml" />
+    <Content Include="1.4\Defs\PawnKinds_Tribal.xml" />
+    <Content Include="1.4\Defs\SmokeBomb.xml" />
+    <Content Include="1.4\Patches\Weapon_Patches.xml" />
+    <Content Include="1.4\Patches\Add_SmokeBombs.xml" />
+    <Content Include="1.4\Patches\Combat_Power.xml" />
+    <Content Include="1.4\Patches\Double_Money.xml" />
+    <Content Include="1.4\Patches\Factions_Misc.xml" />
+    <Content Include="1.4\Patches\Factions_Misc_Impid.xml" />
+    <Content Include="1.4\Patches\Factions_Misc_Neanderthal.xml" />
+    <Content Include="1.4\Patches\VAE_Accessories.xml" />
+    <Content Include="1.4\Patches\VWE_Tribal.xml" />
     <Content Include="About\About.xml" />
+    <Content Include="Common\Textures\Things\Pawn\Humanlike\Apparel\SmokeBomb\SmokeBomb.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Assembly-CSharp">
       <HintPath>R:\Games\RimWorld\RimWorldWin64_Data\Managed\Assembly-CSharp.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Games Online\Steam\SteamApps\common\RimWorld\RimWorldWin64_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Textures\" />
+    <Folder Include="1.4\Assemblies\" />
+    <Folder Include="Common\Textures\Things\Item\Equipment\WeaponRanged\" />
+    <Folder Include="Common\Textures\Things\Projectile\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"W:\Rimworld Modding Ideology\!MOD TRANSFER.bat"</PostBuildEvent>
+    <PostBuildEvent>"R:\Rimworld Modding Biotech\!MOD TRANSFER.bat"</PostBuildEvent>
   </PropertyGroup>
 </Project>
